Added Nash-Player, not tested yet

--- a/Kuhn_2P_limited.ipynb
+++ b/Kuhn_2P_limited.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2022/01/06 20:42:16] Starting Logging\n"
+      "[2022/01/08 16:16:49] Starting Logging\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,6 +129,12 @@
     "    def get_hand(self, card: int):\n",
     "        self.hand = card\n",
     "\n",
+    "    ###################################################################################################\n",
+    "    #         GET POSITION\n",
+    "    ###################################################################################################\n",
+    "    def get_position(self, position: int):\n",
+    "        self.position = position\n",
+    "        \n",
     "    ###################################################################################################\n",
     "    #         PAY INTO POT\n",
     "    ###################################################################################################\n",
@@ -158,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,6 +483,7 @@
     "            self.pot = 0\n",
     "            self.players_allIn = []\n",
     "            \n",
+    "            # initial admin to set up the round\n",
     "            self.update_playerPositions()\n",
     "            self.collect_ante(self.ante)\n",
     "            self.find_playersAllIn(self.list_players)\n",
@@ -597,6 +604,9 @@
     "        self.playerPositions = []\n",
     "        for playerPosition in range(self.n_players):\n",
     "            self.playerPositions.append(playerPosition)\n",
+    "            \n",
+    "            # set player's knowledge about their positions\n",
+    "            self.list_players[playerPosition].get_position(playerPosition)\n",
     "    \n",
     "    ###################################################################################################\n",
     "    #         UPDATE PLAYER POSITIONS\n",
@@ -605,6 +615,9 @@
     "        for i in range(len(self.playerPositions)):\n",
     "            newPosition = (self.playerPositions[i] + 1) % self.n_players\n",
     "            self.playerPositions[i] = newPosition \n",
+    "            \n",
+    "            # update player's knowledge about their positions\n",
+    "            self.list_players[i].get_position(newPosition)\n",
     "           \n",
     "    ###################################################################################################\n",
     "    #         COLLECT PLAYER ANTE\n",
@@ -696,36 +709,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2022/01/06 22:29:06] \n",
-      "[2022/01/06 22:29:06] Starting to play the game\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'PlayerNash' object has no attribute 'position'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-138-32b2fa388e59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     44\u001b[0m         list_cards = [\"J\", \"Q\", \"K\"])\n\u001b[1;32m     45\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;31m# store the results of the game-outcome for statistical analysis\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-91-3131de4f1118>\u001b[0m in \u001b[0;36mplay\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m             \u001b[0;32mwhile\u001b[0m \u001b[0mround_isOpen\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 69\u001b[0;31m                 \u001b[0maction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlist_players\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcurrentPlayer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchose_action\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mallowed_actions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     70\u001b[0m                 logging.debug(\"   Player \\\"{}\\\" chose: {}\".format(\n\u001b[1;32m     71\u001b[0m                     self.list_players[currentPlayer].playerName, action))\n",
-      "\u001b[0;32m<ipython-input-37-eb244412497b>\u001b[0m in \u001b[0;36mchose_action\u001b[0;34m(self, allowed_actions)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;31m#         ACTION FOR POSITION 0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;31m###############################################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mposition\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m             \u001b[0;31m# ----- player is holding best hand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhand\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"K\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'PlayerNash' object has no attribute 'position'"
+      "[2022/01/08 16:45:52] \n",
+      "[2022/01/08 16:45:52] Starting to play the game\n",
+      "[2022/01/08 16:45:56] Game over, player Deterministic1 ran out of money\n",
+      "[2022/01/08 16:45:56] The game finished\n",
+      "[2022/01/08 16:45:56]    Rounds played: 2233\n",
+      "[2022/01/08 16:45:56]    Deterministic1 --> 0\n",
+      "[2022/01/08 16:45:56]    Nash1 --> 200\n",
+      "[2022/01/08 16:45:56]    Player Nash1 won\n",
+      "[2022/01/08 16:45:56] \n",
+      "[2022/01/08 16:45:56] Starting to play the game\n",
+      "[2022/01/08 16:46:04] The game finished\n",
+      "[2022/01/08 16:46:04]    Rounds played: 5000\n",
+      "[2022/01/08 16:46:04]    Deterministic1 --> 55\n",
+      "[2022/01/08 16:46:04]    Nash1 --> 145\n",
+      "[2022/01/08 16:46:04]    Player Nash1 won\n",
+      "[2022/01/08 16:46:04] \n",
+      "[2022/01/08 16:46:04] Starting to play the game\n",
+      "[2022/01/08 16:46:12] Game over, player Deterministic1 ran out of money\n",
+      "[2022/01/08 16:46:12] The game finished\n",
+      "[2022/01/08 16:46:12]    Rounds played: 4675\n",
+      "[2022/01/08 16:46:12]    Deterministic1 --> 0\n",
+      "[2022/01/08 16:46:12]    Nash1 --> 200\n",
+      "[2022/01/08 16:46:12]    Player Nash1 won\n",
+      "[2022/01/08 16:46:12] ========= COMPLETE ==========\n"
      ]
     }
    ],
    "source": [
     "random.seed(314)\n",
-    "n_repeat = 50\n",
+    "n_repeat = 3\n",
     "bankroll = 100\n",
-    "n_rounds = 1000\n",
+    "n_rounds = 5000\n",
     "\n",
     "# ids based on location in list_players\n",
     "dict_winners = {0: 0, 1: 0}\n",
@@ -733,6 +755,10 @@
     "list_bankrolls = []\n",
     "\n",
     "for i in range(n_repeat):\n",
+    "    ###################################################################################################\n",
+    "    #         SET UP THE PLAYERS\n",
+    "    ###################################################################################################\n",
+    "#     # ----- random players\n",
     "#     player1 = PlayerRandomChoice(\n",
     "#          bankroll = bankroll,\n",
     "#          playerId = 0,\n",
@@ -743,6 +769,7 @@
     "#          playerId = 1,\n",
     "#          playerName = \"Random2\")\n",
     "    \n",
+    "#     # ----- deterministic players\n",
     "    player1 = PlayerDeterministic(\n",
     "         bankroll = bankroll,\n",
     "         playerId = 1,\n",
@@ -759,8 +786,11 @@
     "        playerName = \"Nash1\",\n",
     "        alpha=0.2)\n",
     "\n",
+    "    ###################################################################################################\n",
+    "    #         PLAY THE GAME\n",
+    "    ###################################################################################################\n",
     "    list_players = [player1, player2]\n",
-    "\n",
+    "    \n",
     "    game = GameManager(\n",
     "        n_rounds = n_rounds,\n",
     "        list_players = list_players,\n",
@@ -777,6 +807,11 @@
     "    else:\n",
     "        df_avgWinStats.loc[i] = game.avg_winPerRound\n",
     "    list_bankrolls.append(game.df_bankroll)\n",
+    "    \n",
+    "    ###################################################################################################\n",
+    "    #         CLEANUP\n",
+    "    ###################################################################################################\n",
+    "    #del player1, player2, game\n",
     "    \n",
     "logging.info(\"========= COMPLETE ==========\")"
    ]
@@ -799,6 +834,37 @@
    ],
    "source": [
     "dict_winners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game.list_players[1].get_position(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'game' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-45-ad7f466e1aed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_players\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'game' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(game.n_players):\n",
+    "    print(i)"
    ]
   },
   {
