--- a/NashSolver.ipynb
+++ b/NashSolver.ipynb
@@ -291,6 +291,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test cases"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -305,6 +312,7 @@
     }
    ],
    "source": [
+    "# my own example\n",
     "payoff_p1 = np.array([[3,-2], [-1,0]])\n",
     "payoff_p2 = np.array([[-3,2], [1,0]])\n",
     "\n",
@@ -359,6 +367,58 @@
     "# Prisoners dilemma\n",
     "payoff_p1 = np.array([[2,0], [3,1]])\n",
     "payoff_p2 = np.array([[2,3], [0,1]])\n",
+    "\n",
+    "strategy_p1 = find_NashEquilibrium(mtx_payoff=payoff_p1, player=1)\n",
+    "strategy_p2 = find_NashEquilibrium(mtx_payoff=payoff_p2, player=2)\n",
+    "\n",
+    "print(\"Strategy for player 1: \", strategy_p1)\n",
+    "print(\"Strategy for player 2: \", strategy_p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strategy for player 1:  [0.4 0.6]\n",
+      "Strategy for player 2:  [0.6 0.4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Battle of the sexes (v1)\n",
+    "payoff_p1 = np.array([[3,0], [0,2]])\n",
+    "payoff_p2 = np.array([[2,0], [0,3]])\n",
+    "\n",
+    "strategy_p1 = find_NashEquilibrium(mtx_payoff=payoff_p1, player=1)\n",
+    "strategy_p2 = find_NashEquilibrium(mtx_payoff=payoff_p2, player=2)\n",
+    "\n",
+    "print(\"Strategy for player 1: \", strategy_p1)\n",
+    "print(\"Strategy for player 2: \", strategy_p2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Strategy for player 1:  [0.5 0.5]\n",
+      "Strategy for player 2:  [0.5 0.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Battle of the sexes (v2)\n",
+    "payoff_p1 = np.array([[3,1], [0,2]])\n",
+    "payoff_p2 = np.array([[2,1], [0,3]])\n",
     "\n",
     "strategy_p1 = find_NashEquilibrium(mtx_payoff=payoff_p1, player=1)\n",
     "strategy_p2 = find_NashEquilibrium(mtx_payoff=payoff_p2, player=2)\n",
