Added one master-function for iterated removal of strategies

--- a/Formalise_Kuhn2P.ipynb
+++ b/Formalise_Kuhn2P.ipynb
@@ -285,6 +285,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###########################################################################################################\n",
+    "#         find weakly dominated strategies so that they can be removed\n",
+    "###########################################################################################################\n",
+    "def remove_weaklyDominatedStrategies(mtx_payoff, list_stratNames_p0, list_stratNames_p1):\n",
+    "    # ensure that we don't mess around with original arguments\n",
+    "    list_stratNames_p0 = copy.deepcopy(list_stratNames_p0)\n",
+    "    list_stratNames_p1 = copy.deepcopy(list_stratNames_p1)\n",
+    "\n",
+    "    iteration = 0\n",
+    "    while True:\n",
+    "        iteration += 1\n",
+    "        print(f\"[ITERATION {iteration}]\")\n",
+    "        \n",
+    "        # [STEP 1] Find weakly dominated strategies (rows & cols)\n",
+    "        list_rowsDominated = find_weaklyDominatedStrategies(mtx_payoff, findDominatedRows=True)\n",
+    "        print(\"   Found {} weakly dominated strategies (rows)\".format(\n",
+    "            len(list_rowsDominated)))\n",
+    "\n",
+    "        # note that player1 (cols) has the same payoff as p0, but with reversed sign!\n",
+    "        list_colsDominated = find_weaklyDominatedStrategies(mtx_payoff*(-1), findDominatedCols=True)\n",
+    "        print(\"   Found {} weakly dominated strategies (cols)\".format(\n",
+    "            len(list_colsDominated)))\n",
+    "\n",
+    "        # [STEP 2] check if there are strategies to remove\n",
+    "        if (len(list_rowsDominated) == 0) and (len(list_colsDominated) == 0):\n",
+    "            print(\"Removal of weakly dominated strategies complete\")\n",
+    "            return mtx_payoff, list_stratNames_p0, list_stratNames_p1\n",
+    "            \n",
+    "        # [STEP 3] delete all weakly dominated strategies from payoff_matrix\n",
+    "        mtx_payoff = np.delete(mtx_payoff, list_rowsDominated, axis=0)\n",
+    "        mtx_payoff = np.delete(mtx_payoff, list_colsDominated, axis=1)\n",
+    "\n",
+    "        # [STEP 4] delete all weakly dominates strategies from strategyName list\n",
+    "        for idx_del in sorted(list_rowsDominated, reverse=True):\n",
+    "            del list_stratNames_p0[idx_del]\n",
+    "\n",
+    "        for idx_del in sorted(list_colsDominated, reverse=True):\n",
+    "            del list_stratNames_p1[idx_del]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -557,6 +603,123 @@
    "source": [
     "df_mtx = pd.DataFrame(mtx_payoff)\n",
     "df_mtx.to_clipboard()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Use iterated removal of weakly dominated strategies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ITERATION 1]\n",
+      "   Found 15 weakly dominated strategies (rows)\n",
+      "   Found 56 weakly dominated strategies (cols)\n",
+      "[ITERATION 2]\n",
+      "   Found 4 weakly dominated strategies (rows)\n",
+      "   Found 4 weakly dominated strategies (cols)\n",
+      "[ITERATION 3]\n",
+      "   Found 0 weakly dominated strategies (rows)\n",
+      "   Found 0 weakly dominated strategies (cols)\n",
+      "Removal of weakly dominated strategies complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "mtx_payoff_clean, \\\n",
+    "list_stratNames_p0_clean, \\\n",
+    "list_stratNames_p1_clean = remove_weaklyDominatedStrategies(\n",
+    "    mtx_payoff, list_stratNames_p0, list_stratNames_p1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 4)"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtx_payoff_clean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0., -1., -1.],\n",
+       "       [ 0.,  1., -2., -1.],\n",
+       "       [-1., -1.,  1.,  1.],\n",
+       "       [-1.,  0.,  0.,  1.],\n",
+       "       [ 1., -2.,  0., -3.],\n",
+       "       [ 1., -1., -1., -3.],\n",
+       "       [ 0., -3.,  2., -1.],\n",
+       "       [ 0., -2.,  1., -1.]])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mtx_payoff_clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'J': 'CheckFold', 'Q': 'CheckFold', 'K': 'CheckCall'},\n",
+       " {'J': 'CheckFold', 'Q': 'CheckFold', 'K': 'Bet'},\n",
+       " {'J': 'CheckFold', 'Q': 'CheckCall', 'K': 'CheckCall'},\n",
+       " {'J': 'CheckFold', 'Q': 'CheckCall', 'K': 'Bet'},\n",
+       " {'J': 'Bet', 'Q': 'CheckFold', 'K': 'CheckCall'},\n",
+       " {'J': 'Bet', 'Q': 'CheckFold', 'K': 'Bet'},\n",
+       " {'J': 'Bet', 'Q': 'CheckCall', 'K': 'CheckCall'},\n",
+       " {'J': 'Bet', 'Q': 'CheckCall', 'K': 'Bet'}]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_stratNames_p0_clean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scratch-pad, step-by-step"
    ]
   },
   {
